<resources>
    <string name="app_name">Fragments</string>
    <string name="Eng">English</string>
    <string name="Math">Math</string>
    <string name="Ph">Physic</string>
    <string name="create">Create</string>
    <string name="group">Group</string>
    <string name="finish">Finish Test</string>
    <string name="retry">Retry</string>
    <string name="update">Update</string>
    <string name="group_dialog">Group name</string>
    <string name="enter_words">Enter your words</string>
    <string name="word">Word</string>
    <string name="transcription">Transcription</string>
    <string name="translate">Translate</string>
    <string name="enter_formula">Enter your formulas</string>
    <string name="Mform">Formula</string>
    <string name="Mmeaning">Meaning</string>
    <string name="Change">Change</string>
    <string name="Delete">Delete</string>
    <string name="answer_1">Answer_1</string>
    <string name="answer_2">Answer_2</string>
    <string name="answer_3">Answer_3</string>
    <string name="answer_4">Answer_4</string>
    <string name="result">Your result:</string>
    <string name="next">Next</string>
    <string name="word_tr">Word-Translate</string>
    <string name="tr_word">Translate-Word</string>
    <string name="title_program">Study on</string>
    <string name="notification_text">Ви давно не тренувалися!</string>
    <string name="advise_1">Вивчіть краще матеріал</string>
    <string name="advise_1_1">Great result!Congratulations</string>
    <string name="average">Not bad!But you should spend more time in training</string>
    <string name="bad">So sad( You should work harder!</string>
    <string name="topic_statistic">Статистика</string>
    <string name="best_record">Your best record:</string>
    <string name="advise">Поради</string>
    <string name="TODO">TODO</string>
    <string name="data">Дата</string>
    <string name="subjects">Предмети</string>
    <string-array name="word_value">
        <item>activity </item>
        <item>already</item>
        <item>amount</item>
        <item>annoy</item>
        <item>appear</item>
        <item>atom</item>
        <item>author</item>
        <item>biography</item>
        <item>blind</item>
        <item>brain</item>
        <item>cancel</item>
        <item>cartoon</item>
        <item>catchy</item>
        <item>character</item>
        <item>cinema</item>
        <item>circle</item>
        <item>circus</item>
        <item>common</item>
        <item>complain</item>
        <item>composer</item>
        <item>concert</item>
        <item>congratulate</item>
        <item>correct</item>
        <item>dictionary</item>
        <item>dramatic</item>
        <item>dream</item>
        <item>drummer</item>
        <item>enormous</item>
        <item>environment</item>
        <item>event</item>
        <item>excited</item>
        <item>exotic</item>
        <item>expencive</item>
        <item>famous</item>
    </string-array>


    <string-array name="word_translete">
        <item>діяльність </item>
        <item>уже</item>
        <item>кількість</item>
        <item>дратувати</item>
        <item>з\'являтись</item>
        <item>атом</item>
        <item>автор</item>
        <item>біографія</item>
        <item>сліпий</item>
        <item>мозок</item>
        <item>відмінити</item>
        <item>мультик</item>
        <item>помітний</item>
        <item>характер</item>
        <item>кіно</item>
        <item>круг</item>
        <item>цирк</item>
        <item>звичайний</item>
        <item>скаржитись</item>
        <item>композитор</item>
        <item>концер</item>
        <item>поздравляти</item>
        <item>виправляти</item>
        <item>словник</item>
        <item>драматичний</item>
        <item>мрія</item>
        <item>барабанщик</item>
        <item>величезний</item>
        <item>навколишнє средовище</item>
        <item>подія</item>
        <item>схвильований</item>
        <item>екзотичний</item>
        <item>дорогий</item>
        <item>відомий</item>
    </string-array>

    <string-array name ="word_elementary_value">
        <item>can</item>
        <item>catch</item>
        <item>children</item>
        <item>choose</item>
        <item>climb</item>
        <item>close</item>
        <item>clothes</item>
        <item>color</item>
        <item>come</item>
        <item>country</item>
        <item>day</item>
        <item>death</item>
        <item>disease</item>
        <item>do</item>
        <item>door</item>
    </string-array>


    <string-array name ="word_elementary_traslete">
        <item>могти</item>
        <item>ловити</item>
        <item>діти</item>
        <item>обирати</item>
        <item>взбиратись</item>
        <item>закривати</item>
        <item>одяг</item>
        <item>колір</item>
        <item>приходити</item>
        <item>країна</item>
        <item>день</item>
        <item>смерть</item>
        <item>хвороба</item>
        <item>робити</item>
        <item>двері</item>
    </string-array>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
