<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="310dp"
    android:layout_height="270dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_words"
        android:textSize="26dp"
        android:textColor="@color/black"

        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_eng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:text="English:"
            android:textSize="18dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/wordEditText"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="16dp"
            android:hint="@string/word"
            android:singleLine="true" />
        <TextView
            android:id="@+id/text_transcr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_below="@+id/wordEditText"
            android:text="Transcription:"
            android:textSize="18dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/transcrEditText"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/wordEditText"
            android:hint="@string/transcription"
            android:singleLine="true" />
        <TextView
            android:id="@+id/text_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_below="@+id/transcrEditText"
            android:text="Translate:"
            android:textSize="18dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/translateEditText"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/transcrEditText"
            android:hint="@string/translate"
            android:singleLine="true" />

    </RelativeLayout>
    <Button
        android:id="@+id/create_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textStyle="bold"
        android:clickable="true"
        android:background="@color/color_4"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
</LinearLayout>

