<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <Button

        android:layout_marginLeft="16dp"
        android:layout_marginTop="70dp"
        android:id="@+id/circle_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_drawable"

        android:text="@string/Eng"
        android:textStyle="bold"
        android:textSize="20dp"
        android:backgroundTint="@color/color_3"
        android:textColor="@color/colorWhite"
        android:padding="12dp"/>


    <Button
        android:layout_alignParentRight="true"
        android:id="@+id/circle_button_math"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circle_button"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_drawable"
        android:padding="12dp"
        android:text="@string/Math"
        android:backgroundTint="@color/color_4"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:id="@+id/circle_button_ph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_drawable"
        android:layout_below="@+id/circle_button_math"
        android:text="@string/Ph"
        android:textStyle="bold"
        android:textSize="20dp"
        android:backgroundTint="@color/color_3"
        android:textColor="@color/colorWhite"
        android:padding="12dp"/>

</RelativeLayout>