<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_2"
        app:title=" "
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="66dp"
        android:textStyle="italic"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/slesh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/count_text"
        android:text="/"
        android:textStyle="italic"
        android:layout_marginTop="66dp"
        android:textSize="19sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:textStyle="italic"
        android:layout_toRightOf="@+id/slesh"
        android:textSize="19sp"
        android:textColor="@android:color/black"/>


    <TextView
        android:id="@+id/text_result_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/right_word"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/test_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/right_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="38sp"
        android:layout_centerInParent="true"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/right_word"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:textSize="22dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/best_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/right_word"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@+id/record"
        android:textSize="22dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/count"
        android:layout_width="39dp"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />



    <LinearLayout
        android:id="@+id/ln"
        android:layout_below="@+id/right_word"
        android:layout_margin="16dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">




        <Button
            android:id="@+id/answer_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/answer_1"
            android:textColor="@color/colorWhite"
            android:layout_margin="8dp"
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/answer_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorWhite"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/answer_one"
            android:text="@string/answer_2" />





    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_2"

        android:layout_below="@+id/ln"
        android:layout_margin="16dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">




        <Button
            android:id="@+id/answer_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_button"
            android:text="@string/answer_3"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/answer_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorWhite"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/answer_one"
            android:text="@string/answer_4" />





    </LinearLayout>



    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/next"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/finish"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="80dp"
        android:text="@string/finish"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorWhite"/>
    <Button
        android:id="@+id/retry"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="80dp"
        android:text="@string/retry"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorWhite"/>

</RelativeLayout>